crates/aranya-policy-compiler/tests/data/type_errors/invalid_binary_op_invalid_type.fail.policy
function g() bool {
    return 3 || 4
}
